# multi_mcp

./: .coveragerc  .env.example  .gitattributes  .gitignore  .repomixignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  server.json
.githooks/: pre-commit
.github/workflows/: ci.yml  install-test.yml  integration-tests.yml
config/: models.yaml
multi_mcp/: __init__.py  __main__.py  cli.py  server.py  settings.py
multi_mcp/config/: config.yaml
multi_mcp/memory/: store.py
multi_mcp/models/: cli_executor.py  config.py
multi_mcp/prompts/: __init__.py  compare.md  debate-step1.md
multi_mcp/schemas/: base.py  chat.py  compare.py
multi_mcp/tools/: chat.py  codereview.py  compare.py  debate.py
multi_mcp/utils/: helpers.py  intent.py  json_parser.py  llm_runner.py  log_helpers.py  paths.py
scripts/: check-api-keys.sh  check.sh  install.sh  run_server.sh  test_models.py  test_server.sh  validate_bug_detection.py  verify.sh  vulture_whitelist.py
src/: cli.py  config.py  server.py
src/memory/: __init__.py  store.py
src/models/: cli_executor.py  config.py  litellm_client.py  resolver.py
src/prompts/: __init__.py  chat.md  codereview-consolidation.md  codereview.md  compare.md  comparison.md  debate-step1.md  debate-step2.md
src/schemas/: base.py  chat.py  codereview.py  compare.py  comparison.py  debate.py
src/tools/: chat.py  codereview.py  compare.py  comparison.py  debate.py  models.py
src/utils/: artifacts.py  consolidation.py  context.py  files.py  helpers.py  json_parser.py  llm_runner.py  log_helpers.py  mcp_decorator.py  mcp_factory.py  mcp_logger.py  message_builder.py  paths.py  prompts.py  repository.py  request_logger.py
tests/: conftest.py
tests/data/repos/: README.md
tests/data/repos/async-api/: README.md  expected_findings.yaml
tests/data/repos/async-api/async-api/: __init__.py  api.py  config.py  models.py  service.py  storage.py
tests/data/repos/asynctaskqueue/: README.md  expected_findings.yaml
tests/data/repos/asynctaskqueue/asynctaskqueue/: __init__.py  config.py  queue.py  scheduler.py  storage.py  worker.py
tests/data/repos/configworkflow/: README.md  expected_findings.yaml
tests/data/repos/configworkflow/configworkflow/: CLAUDE.md  __init__.py  config.py  engine.py  plugins.py  serializer.py  state.py  steps.py
tests/data/repos/dataflowpipeline/: README.md  expected_findings.yaml
tests/data/repos/dataflowpipeline/dataflowpipeline/: CLAUDE.md  __init__.py  handlers.py  models.py  pipeline.py  stages.py  transforms.py  validators.py
tests/data/repos/distributedcache/: README.md  expected_findings.yaml
tests/data/repos/distributedcache/distributedcache/: __init__.py  consistency.py  hash_ring.py  invalidation.py  node.py  protocol.py  replication.py  storage.py  ttl_manager.py
tests/data/repos/eventworkflow/: README.md  expected_findings.yaml
tests/data/repos/eventworkflow/eventworkflow/: CLAUDE.md  __init__.py  compensations.py  engine.py  event_bus.py  event_store.py  projections.py  saga.py  scheduler.py  snapshots.py  state_machine.py
tests/data/repos/mlpipeline/: README.md  expected_findings.yaml
tests/data/repos/mlpipeline/mlpipeline/: __init__.py  ab_testing.py  drift_detector.py  feature_store.py  metrics_tracker.py  model_registry.py  pipeline.py  preprocessor.py  serving.py  trainer.py  validator.py
tests/data/repos/mlpipeline/mlpipeline/config/: pipeline.yaml
tests/data/repos/pluginpipeline/: README.md  expected_findings.yaml
tests/data/repos/pluginpipeline/pluginpipeline/: __init__.py  backpressure.py  config_watcher.py  executor.py  isolation.py  metrics.py  pipeline.py  plugin_loader.py  resource_pool.py  stream.py
tests/data/repos/servicemesh/: README.md  expected_findings.yaml
tests/data/repos/servicemesh/servicemesh/: __init__.py  circuit_breaker.py  discovery.py  endpoints.py  health_checker.py  load_balancer.py  mesh.py  metrics.py  registry.py  retry_policy.py  tracing.py
tests/data/repos/servicemesh/servicemesh/config/: mesh.yaml
tests/data/repos/serviceregistry/: README.md  expected_findings.yaml
tests/data/repos/serviceregistry/serviceregistry/: __init__.py  auth.py  cache.py  discovery.py  health.py  registry.py  router.py
tests/data/repos/sql_injection/: README.md  expected_findings.yaml
tests/data/repos/sql_injection/sql_injection/: auth.py
tests/data/repos/sql_injection_example/: CLAUDE.md
tests/data/repos/tenantgateway/: README.md  expected_findings.yaml
tests/data/repos/tenantgateway/tenantgateway/: CLAUDE.md  __init__.py  auth.py  circuit_breaker.py  config_sync.py  gateway.py  metrics_collector.py  middleware.py  quota_tracker.py  rate_limiter.py  router.py  tenant_manager.py
tests/fixtures/: __init__.py  cli_mocks.py
tests/integration/: test_cli_performance.py  test_cli_real_execution.py  test_cli_smoke.py  test_cli_workflows.py  test_e2e_azure.py  test_e2e_chat.py  test_e2e_cli_models.py  test_e2e_codereview.py  test_e2e_compare.py  test_e2e_comparison.py  test_e2e_context_and_config.py  test_e2e_debate.py  test_e2e_error_handling.py  test_e2e_gemini_3_flash.py  test_e2e_thread_management.py  test_e2e_web_search.py  test_e2e_workflows.py  test_mcp_server.py
tests/unit/: test_artifacts.py  test_chat.py  test_cli_error_handling.py  test_cli_executor.py  test_cli_parsing.py  test_codereview.py  test_compare.py  test_comparison.py  test_config.py  test_config_merge.py  test_consolidation.py  test_context.py  test_debate.py  test_files.py  test_helpers.py  test_json_parser.py  test_litellm_client.py  test_llm_runner.py  test_log_helpers.py  test_mcp_decorator.py  test_mcp_factory.py  test_mcp_logger.py  test_message_builder.py  test_model_config.py  test_model_resolver.py  test_models_tool.py  test_prompts.py  test_repository.py  test_request_logger.py  test_save_tool_artifacts.py  test_schemas.py  test_store.py  test_web_search.py
tests/unit/utils/: test_intent.py
